--- a/.jshintrc
+++ b/.jshintrc
@@ -1,37 +1,35 @@
 {
-    "reporter": "/home/gartz/projects/location-router/node_modules/jshint-junit-reporter/reporter.js",
-    "reporterOutput": "report/jshint.junit.xml",
-    "camelcase": true,
-    "curly": false,
-    "eqeqeq": true,
-    "es3": false,
-    "forin": true,
-    "freeze": false,
-    "immed": false,
-    "indent": 2,
-    "latedef": true,
-    "newcap": true,
-    "noarg": true,
-    "noempty": true,
-    "nonbsp": true,
-    "nonew": false,
-    "plusplus": false,
-    "quotmark": "single",
-    "undef": true,
-    "unused": true,
-    "strict": false,
-    "trailing": true,
-    "maxparams": 5,
-    "maxdepth": 12,
-    "maxstatements": 40,
-    "maxlen": 100,
-    "boss": true,
-    "browser": true,
-    "evil": false,
-    "globals": {
-        "jQuery": true,
-        "module": true,
-        "require": true,
-        "exports": true
-    }
+	"camelcase": true,
+	"curly": false,
+	"eqeqeq": true,
+	"es3": false,
+	"forin": true,
+	"freeze": false,
+	"immed": false,
+	"indent": 2,
+	"latedef": true,
+	"newcap": true,
+	"noarg": true,
+	"noempty": true,
+	"nonbsp": true,
+	"nonew": false,
+	"plusplus": false,
+	"quotmark": "single",
+	"undef": true,
+	"unused": true,
+	"strict": false,
+	"trailing": true,
+	"maxparams": 4,
+	"maxdepth": 6,
+	"maxstatements": 20,
+	"maxlen": 100,
+	"boss": true,
+	"browser": true,
+	"evil": false,
+	"globals": {
+		"jQuery": true,
+		"console": false,
+		"module": true,
+		"require": true
+	}
 }
