--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ObjectEventTarget",
   "description": "A same behaviour EventTarget prototype, that can work with any object from JavaScript",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://github.com/gartz/ObjectEventTarget/",
   "author": {
     "name": "Gabriel Reitz Giannattasio <gabriel@gartz.com.br>",
@@ -30,26 +30,25 @@
   },
   "devDependencies": {
     "assemble": "~0.4.37",
-    "node-static": "^0.7.4",
     "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "load-grunt-tasks": "~0.5.0",
-    "jshint-stylish": "~0.2.0",
-    "grunt-contrib-qunit": "~0.5.1",
-    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-connect": "~0.9.0",
     "grunt-contrib-jasmine": "~0.8.1",
-    "grunt-template-jasmine-istanbul": "~0.3.1",
-    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-qunit": "~0.5.2",
     "grunt-contrib-rename": "0.0.3",
-    "grunt-update-json": "~0.1.3",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-json-generator": "~0.1.0",
     "grunt-merge-json": "~0.9.4",
-    "jshint-junit-reporter": "0.0.6"
-
+    "grunt-template-jasmine-istanbul": "~0.3.1",
+    "grunt-update-json": "~0.1.3",
+    "jshint-junit-reporter": "0.0.6",
+    "jshint-stylish": "~0.2.0",
+    "load-grunt-tasks": "~0.5.0",
+    "node-static": "^0.7.4"
   },
   "keywords": [
     "assemble"
