--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-rename": "0.0.3",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-coveralls": "^1.0.0",
     "grunt-json-generator": "~0.1.0",
     "grunt-merge-json": "~0.9.4",
     "grunt-template-jasmine-istanbul": "~0.3.1",
