--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ node_js:
   - "0.10"
 before_install: npm install -g grunt-cli
 install: npm install
+before_script:
+ - grunt --force
 script:
   - grunt coveralls
