--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ObjectEventTarget",
+  "name": "objecteventtarget",
   "description": "A same behaviour EventTarget prototype, that can work with any object from JavaScript",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "homepage": "https://github.com/gartz/ObjectEventTarget/",
   "author": {
     "name": "Gabriel Reitz Giannattasio <gabriel@gartz.com.br>",
@@ -20,7 +20,7 @@
       "url": "https://github.com/gartz/ObjectEventTarget/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "Grunt.js",
+  "main": "ObjectEventTarget.js",
   "engines": {
     "node": ">= 0.10.0"
   },
