--- a/.jshintrc
+++ b/.jshintrc
@@ -21,7 +21,7 @@
 	"trailing": true,
 	"maxparams": 4,
 	"maxdepth": 6,
-	"maxstatements": 20,
+	"maxstatements": 40,
 	"maxlen": 100,
 	"boss": true,
 	"browser": true,
@@ -30,6 +30,12 @@
 		"jQuery": true,
 		"console": false,
 		"module": true,
-		"require": true
+		"require": true,
+		"describe": true,
+		"it": true,
+		"expect": true,
+		"beforeEach": true,
+		"spyOn": true,
+		"jasmine": true
 	}
 }
