--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,1 @@
-{
-	"name": "objecteventtarget",
-	"version": "1.3.0",
-	"description": "A same behaviour EventTarget prototype, that can work with any object from JavaScript",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/gartz/ObjectEventTarget.git"
-	}
-}
+{"name":"objecteventtarget","version":"1.3.1","description":"A same behaviour EventTarget prototype, that can work with any object from JavaScript","repository":{"type":"git","url":"https://github.com/gartz/ObjectEventTarget.git"}}
