--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ node_js:
 before_install: npm install -g grunt-cli
 install: npm install
 before_script:
- - grunt
+  - grunt
 script:
   - grunt coveralls
+after_script:
+  - codeclimate < report/coverage/lcov/lcov.info
+addons:
+  code_climate:
+    repo_token: f5e23552badd577428e20090f2458b2ca324cef32551a2246bf5d2fe48f1a124
